# project_test

./: .gitignore  README.md  javidan_nuriyev_eda.py  javidan_nuriyev_fe1.py  javidan_nuriyev_fe2.py  javidan_nuriyev_trainmodel.py  main.py  predict.py  pyproject.toml  train.py
.github/workflows/: deploy.yml
backend/: app.py
my-mlops-project/: README.md  pyproject.toml
my-mlops-project/train_scripts/: train_eda.py.txt  train_fe1.py.txt  train_fe2.py.txt  train_trainmodel.py.txt
my_ml_project/: README.md  predict.py  train.py
