[project]
name = "my-mlops-project"
version = "0.1.0"
description = "This is our first mlops task"
readme = "README.md"
requires-python = ">= 3.13"
authors = [{ name = "Javidan007", email = "nuriyev.javidan.fuzuli.2022@unec.edu.az" }]
dependencies = [
    # runtime deps go here, e.g. "pandas>=2.2"
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.black]
line-length = 100
extend-exclude = '^(data|reports|models|notebooks)/'

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
skip_glob = ["data/**", "reports/**", "models/**", "notebooks/**"]
